# campusing

./: Cargo.toml  LICENSE  README.md  build.rs
campusing_agent/: Cargo.toml
campusing_master/: Cargo.toml
proto/common/v1/: common.proto
src/: client.rs  server.rs
