[package]
name = "campusing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "campusing-server"
path = "src/server.rs"

[[bin]]
name = "campusing-client"
path = "src/client.rs"

[dependencies]
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
